--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "homepage": "https://github.com/gboyegadada/react-native-protected-data#readme",
   "license": "MIT",
   "private": false,
+  "sideEffects": false,
+  "nativePackage": true,
   "devDependencies": {
     "@react-native-community/bob": "^0.16.2",
+    "@types/fbemitter": "^2.0.32",
     "@types/react-native": "^0.63.10",
     "prettier": "^2.1.1",
     "react": "^16.13.1",
