--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,11 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/@types",
+      "./lib/typescript"
+    ] 
   }
 }
